finished recap slides 10.2

--- a/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
+++ b/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
@@ -353,7 +353,7 @@ line charts, area charts (including stacked & proportional stacked area charts)
 . . . 
 
 ::: {.center-text}
-[**Rankings:**]{.teal-text .body-text-m} 
+[**Amounts:**]{.teal-text .body-text-m} 
 
 bar plots, lollipop plots (and dumbbell variant), dotplots, heatmaps 
 :::
@@ -1047,9 +1047,9 @@ week 1 | week 2 | week 3 | week 4 | week 5 | [**week 6**]{.teal-text} | week 7 |
 ```{r}
 #| eval: true
 #| echo: false
-#| out-width: "100%"
+#| out-width: "80%"
 #| fig-align: "center"
-knitr::include_graphics("images/week10/earnings.png")
+knitr::include_graphics("images/week10/salary-plot.png")
 ```
 :::
 
@@ -1067,15 +1067,19 @@ week 1 | week 2 | week 3 | week 4 | week 5 | [**week 6**]{.teal-text} | week 7 |
 [Week 7]{.slide-title-xl}
 :::
 
-<br>
-
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
 #| fig-align: "center"
-knitr::include_graphics("images/week10/non-fundamental-plots.png")
+knitr::include_graphics("images/week10/positive-feedback.png")
 ```
+
+<br>
+
+::: {.center-text .body-text-s .gray-text}
+*Image source: [istockphoto](https://www.istockphoto.com/illustrations/positive-feedback){target="_blank"}*
+:::
 
 <br>
 
@@ -1096,11 +1100,78 @@ week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | [**week 7**]{.teal-text} |
 #| echo: false
 #| out-width: "80%"
 #| fig-align: "center"
-knitr::include_graphics("images/week10/horst-eco-r4ds.png")
+knitr::include_graphics("images/week10/observable.png")
 ```
 
 ::: {.footer}
 week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | [**week 8**]{.teal-text} | week 9 | week 10
+:::
+
+---
+
+## {#ojs data-menu-title="OJS"} 
+
+[We saw that Observable Plot isn't so different from `{ggplot2}`]{.slide-title3}
+
+<hr>
+
+<br>
+
+:::: {.columns}
+
+::: {.column width="50%"}
+::: {.center-text .body-text-s}
+Building inputs that update data viz outputs in an Observable Notebook is pretty sleek
+:::
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/week10/ojs-inputs.gif")
+```
+:::
+
+::: {.column width="50%"}
+::: {.center-text .body-text-s}
+D3 is complex, but opens up limitless data viz possibilities!
+:::
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/week10/D3.gif")
+```
+:::
+::::
+
+::: {.footer}
+week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | [**week 8**]{.teal-text} | week 9 | week 10
+:::
+
+---
+
+## {#week9 data-menu-title="Week 9"} 
+
+::: {.center-text}
+[Week 9]{.slide-title-xl}
+:::
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/week10/horst-eco-r4ds.png")
+```
+
+::: {.center-text .body-text-s .gray-text}
+*Image source: [Allison Horst](https://allisonhorst.com/){target="_blank"}*
+:::
+
+::: {.footer}
+week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 9**]{.teal-text} | week 10
 :::
 
 ---
@@ -1116,12 +1187,12 @@ week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | [**week 8**]{.tea
 ::: {.column width="50%"}
 <br>
 <br>
+<br>
+<br>
 
 - adding context, narrative, visuals
 - storytelling earns trust and evokes emotion
 - know your audience
-- our data is never a perfect reflection of the real world
-- best use of data is to teach us what isn't true
 - no matter the format, audience, or setting we have the opportunity to tell a story
 :::
 
@@ -1204,7 +1275,7 @@ knitr::include_graphics("images/week10/chalabi-vaquitas.png")
 ::::
 
 ::: {.footer}
-week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | [**week 8**]{.teal-text} | week 9 | week 10
+week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 9**]{.teal-text} | week 10
 :::
 
 ---
@@ -1230,69 +1301,6 @@ knitr::include_graphics("images/week10/andy-kirk.png")
 <br>
 
 ::: {.footer}
-week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | [**week 8**]{.teal-text} | week 9 | week 10
-:::
-
----
-
-## {#week9 data-menu-title="Week 9"} 
-
-::: {.center-text}
-[Week 9]{.slide-title-xl}
-:::
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/observable.png")
-```
-
-::: {.footer}
-week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 9**]{.teal-text} | week 10
-:::
-
----
-
-## {#ojs data-menu-title="OJS"} 
-
-[We saw that Observable Plot isn't so different from `{ggplot2}`]{.slide-title3}
-
-<hr>
-
-<br>
-
-:::: {.columns}
-
-::: {.column width="50%"}
-::: {.center-text .body-text-s}
-Building inputs that update data viz outputs in an Observable Notebook is pretty sleek
-:::
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/ojs-inputs.gif")
-```
-:::
-
-::: {.column width="50%"}
-::: {.center-text .body-text-s}
-D3 is complex, but opens up limitless data viz possibilities!
-:::
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/D3.gif")
-```
-:::
-::::
-
-::: {.footer}
 week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 9**]{.teal-text} | week 10
 :::
 
@@ -1304,9 +1312,13 @@ week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 
 [Week 10]{.slide-title-xl}
 :::
 
+<br>
+<br>
+
 :::: {.columns}
 
 ::: {.column width="50%"}
+<br>
 ```{r}
 #| eval: true
 #| echo: false
@@ -1314,21 +1326,9 @@ week 1 | week 2 | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | [**week 
 #| fig-align: "center"
 knitr::include_graphics("images/week10/waffle.png")
 ```
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "40%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/chatGPT.png")
-```
 :::
 
 ::: {.column width="50%"}
-
-<br>
-<br>
-
 ```{r}
 #| eval: true
 #| echo: false
@@ -1378,7 +1378,9 @@ knitr::include_graphics("images/week10/billy-mays.gif")
 
 <hr>
 
-Never *not* a precursor to building awesome viz -- the `{tidyverse}` became a familiar friend (though we also leveraged `{janitor}`, `{chron}`, `{naniar}`) in helping us clean and tidy data sets, including:
+Never *not* a precursor to building awesome viz -- the `{tidyverse}` became a familiar friend in helping us clean and tidy data sets, including:
+
+<br>
 
 [{{< fa oil-well title="an oil well" >}}]{.teal-text} fracking (FracFocus)
 
@@ -1396,7 +1398,7 @@ Never *not* a precursor to building awesome viz -- the `{tidyverse}` became a fa
 
 [{{< fa cloud-rain title="rain drops falling from a cloud" >}}]{.teal-text} precipitation data from NOAA National Centers for Environmental Information
 
-[{{< fa earth-americas title="planet Earth" >}}]{.teal-text} `{tigirs}` geometries
+[{{< fa earth-americas title="planet Earth" >}}]{.teal-text} `{tigris}` geometries
 
 [{{< fa hand-point-right title="a hand pointing to the right" >}}]{.teal-text} Your own data!
 
@@ -1479,51 +1481,17 @@ Artwork by [Allison Horst](https://allisonhorst.com/)
 
 ## {#evals-eocs data-menu-title="Evals & EOCs"} 
 
-[Pretty please fill out course evals! These are *so* important!]{.slide-title3}
+[Pretty please fill out course evals!]{.slide-title}
 
 <hr>
 
-:::: {.columns}
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-::: {.column width="50%"}
-::: {.center-text}
-[**Sam**]{.body-text-m .teal-text}
-
-**<https://go.blueja.io/sQgz_41_Z0Cr5QzhZPjnZA>**
+::: {.center-text .body-text-xl}
+**[https://ucsb.bluera.com/ucsb/](https://ucsb.bluera.com/ucsb/){target="_blank"}**
 :::
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "70%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/QR-sam.png")
-```
-:::
-
-::: {.column width="50%"}
-::: {.center-text}
-[**Sevan**]{.teal-text .body-text-m}
-
-**<add link here>**
-:::
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "40%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/QR-section1.png")
-```
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "40%"
-#| fig-align: "center"
-knitr::include_graphics("images/week10/QR-section2.png")
-```
-:::
-
-::::
-
