updated coord_equal() > coord_fixed()

--- a/course-materials/keys/KEY-lecture10.1-misc-charts.qmd
+++ b/course-materials/keys/KEY-lecture10.1-misc-charts.qmd
@@ -72,7 +72,7 @@ caption <- "Source: Bigfoot Field Researchers Organization"
 #......................create waffle chart.......................
 ggplot(ca_season_counts, aes(fill = season, values = n)) +
   geom_waffle(color = "white", size = 0.3, n_rows = 10) +
-  coord_equal() +
+  coord_fixed() +
   scale_fill_manual(values = season_palette) +
   labs(title = title,
        subtitle = subtitle,
@@ -111,7 +111,7 @@ ggplot(ca_season_counts, aes(fill = season, values = n)) +
 ggplot(ca_season_counts, aes(fill = season, values = n)) +
   geom_waffle(color = "white", size = 0.3, n_rows = 10,
               make_proportional = TRUE) + # <1>
-  coord_equal() +
+  coord_fixed() +
   scale_fill_manual(values = season_palette) +
   theme_void() +
   theme(
