fixed broken link for week 10 discussion

--- a/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
+++ b/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
@@ -70,7 +70,7 @@ There's a *long* history of people (across time, regions, cultures) using visual
 knitr::include_graphics("images/week10/lascaux.png")
 ```
 ::: {.center-text .body-text-s .gray-text}
-Lascaux Cave Paintings. Image source: [Rock Art Blog](https://rockartblog.blogspot.com/2018/08/are-lascaux-cave-paintings-encoded.html)
+Lascaux Cave Paintings. Image source: [Rock Art Blog](https://rockartblog.blogspot.com/2018/08/are-lascaux-cave-paintings-encoded.html){target="_blank"}
 :::
 :::
 
@@ -83,7 +83,7 @@ Lascaux Cave Paintings. Image source: [Rock Art Blog](https://rockartblog.blogsp
 knitr::include_graphics("images/week10/nightingale.png")
 ```
 ::: {.center-text .body-text-s .gray-text}
-Florence Nightingale. Image source: [Cool Infographics](https://coolinfographics.com/blog/2009/11/25/florence-nightingale-causes-of-mortality-infographic-from-18.html)
+Florence Nightingale. Image source: [Cool Infographics](https://coolinfographics.com/blog/2009/11/25/florence-nightingale-causes-of-mortality-infographic-from-18.html){target="_blank"}
 :::
 :::
 
@@ -96,7 +96,7 @@ Florence Nightingale. Image source: [Cool Infographics](https://coolinfographics
 knitr::include_graphics("images/week10/dubois.png")
 ```
 ::: {.center-text .body-text-s .gray-text}
-W.E.B. DuBois. Image source: [Smithsonian Magazine](https://www.smithsonianmag.com/history/first-time-together-and-color-book-displays-web-du-bois-visionary-infographics-180970826/)
+W.E.B. DuBois. Image source: [Smithsonian Magazine](https://www.smithsonianmag.com/history/first-time-together-and-color-book-displays-web-du-bois-visionary-infographics-180970826/){target="_blank"}
 :::
 :::
 
@@ -251,7 +251,7 @@ knitr::include_graphics("images/week10/choropleth.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [New York Times](https://www.nytimes.com/2021/09/16/learning/whats-going-on-in-this-graph-new-normal-us-precipitation.html)
+Source: [New York Times](https://www.nytimes.com/2021/09/16/learning/whats-going-on-in-this-graph-new-normal-us-precipitation.html){target="_blank"}
 :::
 :::
 
@@ -267,7 +267,7 @@ knitr::include_graphics("images/week10/sankey-plastics.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [The Medium](https://medium.com/@HolgerBartel/sankey-diagrams-2ca0504062c2)
+Source: [The Medium](https://medium.com/@HolgerBartel/sankey-diagrams-2ca0504062c2){target="_blank"}
 :::
 :::
 
@@ -302,7 +302,7 @@ Also, see the arc sankey: https://www.flerlagetwins.com/2019/10/arc-sankey.html
 <br>
 
 1. think about the **task(s)** you want to enable (e.g. compare groups, visualize flow) and / or the **message** you want to convey
-2. consider the types and number of **variables** and data points -- decision trees, like [From Data to Viz](https://www.data-to-viz.com/) can help!
+2. consider the types and number of **variables** and data points -- decision trees, like [From Data to Viz](https://www.data-to-viz.com/){target="_blank"} can help!
 3. **pair** multiple graphs together
 4. **arrange** components of your graphic
 5. **test** the outcomes of your graphic on others
@@ -994,7 +994,7 @@ week 1 | week 2 | week 3 | week 4 | [**week 5**]{.teal-text} | week 6 | week 7 |
 - how typeface can affect emotions & perceptions
 - how to choose a typeface(s)
 - using typeface & font style to guide a reader through your visualization
-- finding typefaces and font styles on [Google Fonts](https://fonts.google.com/)
+- finding typefaces and font styles on [Google Fonts](https://fonts.google.com/){target="_blank"}
 :::
 
 ::: {.column width="50%"}
@@ -1474,7 +1474,7 @@ knitr::include_graphics("images/week10/horst-touchstones.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Artwork by [Allison Horst](https://allisonhorst.com/)
+Artwork by [Allison Horst](https://allisonhorst.com/){target="_blank"}
 :::
 
 ---
