--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -21,8 +21,6 @@ knitr::include_graphics(here::here("images", "horst-touchstones.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
-*Coming soon!* 
-
 ### A. Install required packages
 
 ```{r}
@@ -53,7 +51,7 @@ We'll use our last discussion section to give and receive feedback on final pres
 
 1. Review the requirements for your final presentation, which are detailed in [HW #4](assignments/HW4.qmd#part3-present){target="_blank"}, and consider your responses to each of them
 
-2. Prepare a Google slide deck (or other presentation format, though it must be easily shareable with Sam, so that she can have it open and ready on her computer on the day of final presentations) with your visualization(s). You're welcome to present just your final data viz deliverable (e.g. infographic) on it's own (i.e. without a slide deck), though you should still be prepared to talk through the [required points](http://localhost:4491/course-materials/assignments/HW4.html#part3-present){target="_blank"}
+2. Prepare a Google slide deck (or other presentation format, though it must be easily shareable with Sam, so that she can have it open and ready on her computer on the day of final presentations) with your visualization(s). You're welcome to present just your final data viz deliverable (e.g. infographic) on it's own (i.e. without a slide deck), though you should still be prepared to talk through the [required points](assignments/HW4.qmd#part3-present){target="_blank"}
 <!-- You may choose how to organize your slides and present your data visualization(s), though you should limit the total number to ~3 slides (for a 3 minute-long presentation).  -->
 
 3. Practice your talk! You don't need to have a *perfectly* polished draft presentation, but the closer you get it to your ideal version, the better. You'll be practicing your talk in front of 1-2 of your peers during section.
