added link to SR3 to assignments page

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -16,7 +16,7 @@ Earning "Satisfactory" marks on Self-reflections (SRs) and Homework Assignments 
 | SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd)         | Mon 02/03/2025 | Sat 02/08/2025      |
 | HW                      | [Homework Assignment #3](course-materials/assignments/HW3.qmd)                   | Tue 02/11/2025 | Tue 02/25/2025      | 
 | HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd)                | Tue 02/25/2025 | Tue 03/11/2025      | 
-| SR                      | End-of-course reflection (SR #3)      | Mon 03/10/2025 | Sat 03/15/2025      |
+| SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd)      | Mon 03/10/2025 | Sat 03/15/2025      |
 | HW (final presentation) | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (presentation) | Tue 02/25/2025           | Mon 03/17/2025 |
 : {tbl-colwidths="[22,38,20,20]"} 
 
