added finals week instructions

--- a/course-materials/week11.qmd
+++ b/course-materials/week11.qmd
@@ -17,18 +17,26 @@ knitr::include_graphics(here::here("images", "horst-support-community.png"))
 *Artwork by [Allison Horst](https://allisonhorst.com/){target="_blank"}.*
 :::
 
-*Coming soon!*
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Data viz showcase prep
 
-<!-- PRACTICE PRESENTATIONS WITH PARTNERS -->
+Let's celebrate all of our hard work with a data viz showcase! This is an opportunity to share some of your successes, challenges, and resulting products with your peers. Please be sure to review / complete the following ahead of time:
 
-<!-- Let's celebrate all of our hard work with a data visualization showcase! Everyone will have ~2 minutes to show off their creations. Please add your three data visualizations (option 1) or infographic (option 2) to your assigned slide (linked below) and come prepared to *briefly* describe the following: -->
+1. **Find your showcase time slot on [this schedule](https://docs.google.com/spreadsheets/d/1qRKg9bpni7VDsZPOk8m1cYahB8NQ1l9pZFRzbqsrbio/edit?usp=sharing){target="_blank"}.** You will have three minutes to tell us about your data viz (plus an extra buffer minute to transition between presenters). We will reserve time for two longer breaks as well.
 
-<!-- 1. Describe your data and where you found it -->
-<!-- 2. What question(s) did you set out to answer? -->
-<!-- 3. One thing that you're super proud of figuring out / creating -->
-<!-- 4. One thing that you wanted to implement but couldn't quite make happen (yet) -->
+2. **Review the presentation requirements, as detailed in [HW #4](assignments/HW4.qmd#part3-present){target="_blank"}.** Please be sure to address all prompts during your presentation.
 
-<!-- Find your slide here: -->
+3. **Add your presentation link to the [schedule](https://docs.google.com/spreadsheets/d/1qRKg9bpni7VDsZPOk8m1cYahB8NQ1l9pZFRzbqsrbio/edit?usp=sharing){target="_blank"}.** The format is super flexible, so long as Sam can access it via a URL on her computer. You may use your published blog post, create Google slides, etc. Please add your URL by 10:00am on Monday 3/17.
 
-<!-- - [10am section slides](https://docs.google.com/presentation/d/1uGNLzMlspbj1Pn0qQdF7CoD2RA0eIl8DHj5tQyXh3qE/edit?usp=sharing) -->
-<!-- - [11am section slides](https://docs.google.com/presentation/d/1u31owoOiWuKI_ZEdebCpytsr1s2FtaKY2UzM0T59RAg/edit?usp=sharing) -->
+## {{< fa bullhorn title="a bullhorn" >}} Expand the reach of your work
+
+Proud of your work, and eager to share with a broader audience? Consider these opportunities:
+
+1. **Get featured on Bren's social media accounts:** Bren's Director of Communications and Marketing, [AL Black-Goldin](https://bren.ucsb.edu/people/albert-black-goldin){target="_blank"}, will attend our showcase and is looking for some great viz to share out on Bren's socials. The Bren School network and following is quite large, and this is a fun opportunity to get your work in front of potential employers and collaborators.
+
+2. **Submit your work to UCSB's 2025 Art of Science competition:** This annual event aims to,
+
+>"capture the imagination and share the beauty of science through photographs and images that describe some aspect of research; whether it be spectroscopic images of a new material, data from a series of simulations, photos of a device or instrument, data visualization, or some other aspect of research captured visually."
+
+and makes specific mention of *"thoughtful, innovative, and artistic visual data stories such as infographics capable of effectively and aesthetically communicating research through visual narratives"*
+
+Submissions are due by April 14, 2025. Learn more at [https://art-csep.cnsi.ucsb.edu/](https://art-csep.cnsi.ucsb.edu/).
