updated week 11 page title to showcase

--- a/course-materials/week11.qmd
+++ b/course-materials/week11.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Finals week presentations"
+title: "Finals week showcase"
 subtitle: "Week 11"
 description: "Monday March 17^th^, 2025"
 ---
