started rearranging 2026 hws

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -4,20 +4,33 @@ subtitle: "assignment links will become available in the tables below on the dat
 title-block-banner: true
 ---
 
+## Calendar
+
+::: {.callout-important}
+**All HWs and SRs are due at 11:59pm** on the dates listed. HWs will always be due on Wednesdays and SRs will always be due on Fridays.
+:::
+
+<iframe src="https://calendar.google.com/calendar/embed?src=c_aaded740ae1fc6f435d3c50725f02f449004617267c9e8e96011b320974b7faf%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
 ## Assignments
 
-Earning "Satisfactory" marks on Self-reflections (SRs) and Homework Assignments (HWs) will determine your letter grade (e.g. A, B, etc.) for this course. **All SRs and HWs are due at 11:59pm** on the dates specified, below:
+::: {.callout-important}
+You will be building towards your final project deliverables -- a data-driven infographic & blog post -- throughout the quarter (see assignments that are noted as ***(final project)*** in the table, below). Those individual assignments will reference these [final project instructions](course-materials/assignments/final-project.qmd){target="_blank"}.
+:::
 
 | Assignment Type         | Assignment Title                      | Date Assigned   | Date Due           |
 |:------------------------|---------------------------------------|----------------|---------------------|
-| SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1-precourse.qmd)         | Mon 01/06/2025 | Sat 01/11/2025      |
-| HW                      | [Homework Assignment #1](course-materials/assignments/HW1.qmd)                | Tue 01/07/2025 | Tue 01/21/2025      |
-| HW                      | [Homework Assignment #2](course-materials/assignments/HW2.qmd)                | Tue 01/21/2025 | Tue 02/04/2025      | 
-| SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd)         | Mon 02/03/2025 | Sat 02/08/2025      |
-| HW                      | [Homework Assignment #3](course-materials/assignments/HW3.qmd)                   | Tue 02/11/2025 | Tue 02/25/2025      | 
-| HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd)                | Tue 02/25/2025 | Tue 03/11/2025      | 
-| SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd)      | Mon 03/10/2025 | Sat 03/15/2025      |
-| HW (final presentation) | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (presentation) | Tue 02/25/2025           | Mon 03/17/2025 |
+| SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1-precourse.qmd) | Wed 01/07/2026 | Fri 01/09/2026      |
+| HW                      | [Homework Assignment #1](course-materials/assignments/HW1.qmd)                | Wed 01/07/2026 | Wed 01/14/2026      |
+| HW                      | [Homework Assignment #2](course-materials/assignments/HW2.qmd) (final project)               | Wed 01/14/2026 | Wed 01/21/2026      | 
+| HW                      | [Homework Assignment #3](course-materials/assignments/HW3.qmd)                | Wed 01/21/2026 | Wed 01/28/2026      | 
+| HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (final project)               | Wed 01/28/2026 | Wed 02/04/2026      | 
+| SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd) | Wed 02/04/2026 | Fri 02/06/2026      |
+| HW                      | [Homework Assignment #5](course-materials/assignments/HW5.qmd)                   | Wed 02/04/2026 | Wed 02/11/2026      | 
+| HW                      | [Homework Assignment #6](course-materials/assignments/HW6.qmd) (final project)               | Wed 02/11/2026 | Wed 02/25/2026      | 
+| HW                      | [Homework Assignment #7](course-materials/assignments/HW7.qmd) (final project) | Wed 02/25/2026          | Wed 03/11/2026 |
+| SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd)      | Wed 03/11/2026 | Fri 03/13/2026     |
+| HW                      | [Homework Assignment #8](course-materials/assignments/HW4.qmd) (final project) | Wed 03/11/2026           | Thu 03/19/2026 |
 : {tbl-colwidths="[22,38,20,20]"} 
 
 <!-- ::: {.callout-important} -->
