--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -1,30 +1,26 @@
 ---
-title: "Assignment #1 (HW #1)"
-subtitle: "Assigned Tue 01/06/2025 | Due Tue 01/21/2025"
+title: "HW #1: Annotating `{ggplot2}` code"
+subtitle: "Assigned Wed 01/07/2026 | Due Wed 01/14/2026"
 editor_options: 
   chunk_output_type: console
 ---
 
 ::: {.callout-important}
-## You must earn a "Satisfactory" mark for each individual Part (I and II) to earn a "Satisfactory" mark for Assignment #1.
-
-**Read each part of the assignment carefully**, and use the check boxes to ensure you've addressed all elements of the assignment!
+TODO: revise assignment; include genAI component; update LOs; add final Q about using genAI
 :::
 
-# [Part I: Annotating `{ggplot2}` code]{.pink-text} {#hw1-p1}
-
-## Learning Outcomes {#hw1-p1-LOs}
+## Learning Outcomes {#LOs}
 
 - read code written by others 
 - assess, critique, and provide constructive feedback on data visualizations
 
-## Description {#hw1-p1-description}
+## Description {#description}
 
 Much of your time as a data scientist will be spent looking at code written by others -- you may imagine scenarios such as trying to learn from and adapt someone else's code for your own work, conducting a code review for a colleague, or validating the code output of a generative AI tool. Being able to look at and make sense of code that you did not write yourself is an invaluable skill and an important one to practice throughout your learning journey. Here, you'll be asked to interpret and annotate `{ggplot2}` code written by someone else. This will likely require running code (both as a whole *and* line-by-line), as well as Googling and / or reading documentation.
 
 *I recognize that there is (likely) **a lot** of new code presented here that we haven't yet covered in this course (we'll get there eventually though!). This is intentionally an exercise is resourcefulness! By the end of this exercise, you should feel a bit more confident in your ability to interpret (and maybe even reuse!) code written by others.*
 
-### 1a. Annotate code {#hw1-p1a}
+### a. Annotate code {#part-a}
 
 Annotate code adapted from [Dan Oehm](https://gradientdescending.com/#google_vignette){target="_blank"}'s ***UFO Sightings*** visualization ([original code](https://github.com/doehm/tidytues/blob/main/scripts/2023/week-25-ufo/ufo.R){target="_blank"} & [original visualization](https://github.com/doehm/tidytues/blob/main/scripts/2023/week-25-ufo/ufo.png){target="_blank"}). You can find metadata and additional information about the data set on the [rfordatascience/tidytuesday (2023-06-20) `readme.md`](https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-06-20/readme.md#data-dictionary){target="_blank"}. [**Part 1 should be completed via GitHub Classroom (find the assignment link on Slack).**]{.teal-text}
 
@@ -93,7 +89,7 @@ Modified viz, by Sam Shanny-Csik (refactored code, see below)
 {{< include sections/HW1-code.qmd >}}
 :::
 
-### 1b. Answer questions {#hw1-p1b}
+### b. Answer questions {#part-b}
 
 Once you're done annotating, respond to the following questions about this data visualization: 
 
@@ -119,19 +115,19 @@ Everyone receives one "free pass" for not submitting assignments via specified c
 - [ ] Include your preferred name in the `author` field of the `Part1.qmd` YAML. 
 - [ ] Update each comment line in the code that reads, `# ANNOTATE`, with a *brief* description, written in your own words. Some lines that have already been annotated for you -- you do not need to re-write these annotations. You are **allowed up to five incorrect or missing annotations**.
 - [ ] Leave the code chunk options set to `eval: false` and `echo: true`, which ensures that your code renders, but the output(s) is suppressed. If you decide to break your code into smaller code chunks, ensure that each has the same options set. 
-- [ ] Answer all Part 1b questions. Questions 1 and 2 have correct answers. Responses to questions 3-5 should be unique to you but answered in full. There is no set length requirement, and bullet points are acceptable.
+- [ ] Answer all Part B questions. Questions 1 and 2 have correct answers. Responses to questions 3-5 should be unique to you but answered in full. There is no set length requirement, and bullet points are acceptable.
 - [ ] We (your instructors) should be able to successfully render `Part1.qmd` locally without errors (in other words, be sure that *you* can render `Part1.qmd` locally before submitting).
-- [ ] Push your completed `Part1.qmd` to GitHub via GitHub Classroom by 11:59pm PT on Sat 01/18/2025.
+- [ ] Push your completed `Part1.qmd` to GitHub via GitHub Classroom by 11:59pm PT on Wed 01/14/2026.
 
 <br>
 
 ::: {.center-text .large-fa-icon .teal-text}
-{{< fa code title="The symbol for code, </>" >}} End Part I {{< fa code title="The symbol for code, </>" >}}
+{{< fa code title="The symbol for code, </>" >}} End HW #1 {{< fa code title="The symbol for code, </>" >}}
 :::
 
-<br>
+<!-- <br> -->
 
-# [Part II: Find a data set(s) that interests you]{.pink-text} {#hw1-p2}
+<!-- # [Part II: Find a data set(s) that interests you]{.pink-text} {#hw1-p2}
 
 ## Learning Outcomes {#hw1-p2-LOs}
 
@@ -198,4 +194,4 @@ Complete the following step under your own personal GitHub profile, *not* via Gi
 
 ::: {.center-text .large-fa-icon .teal-text}
 {{< fa table title="A data table with two columns and two rows" >}} End Part II {{< fa table title="A data table with two columns and two rows" >}}
-:::
+::: -->
