--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -1,285 +1,77 @@
 ---
-title: "Assignment #2 (HW #2)"
-subtitle: "Assigned Tue 01/21/2025 | Due Tue 02/04/2025"
+title: "HW #2: Final Project (Finding Data)"
+subtitle: "Assigned Wed 01/14/2026 | Due Wed 01/21/2026"
+editor_options: 
+  chunk_output_type: console
 ---
 
 ::: {.callout-important}
-## You must earn a "Satisfactory" mark for each individual Part (I and II) to earn a "Satisfactory" mark for Assignment #1.
-
-**Read each part of the assignment carefully**, and use the check boxes to ensure you've addressed all elements of the assignment!
+TODO: revise assignment; add final Q about using genAI; update submission instructions to include upload to gradescope
 :::
 
-# [Part I: Choosing the right graphic form]{.pink-text} {#part1}
+## Learning Outcomes {#LOs}
 
-## Learning Outcomes {#p1-learning-outcomes}
+***Note:** This HW is the the first step in working towards your final course assignment, [HW #4](HW4.qmd){target="_blank"} (we'll be breaking it down a bit, week-by-week). **This week, we'll mostly be focused on some prep work.** Your final assignment is meant to combine nearly all of the course learning outcomes(!):*
 
 - identify which types of visualizations are most appropriate for your data and your audience
 - prepare (e.g. clean, explore, wrangle) data so that it's appropriately formatted for building data visualizations
-- build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
-
-## Description {#p1-description}
-
-In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning to natural hazards and demographics data, courtesy of the **[FEMA National Risk Index](https://hazards.fema.gov/nri/){target="_blank"} (NRI)** and the **[US Census Bureau's American Community Survey](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"} (ACS)**.
-
-### 1a. Background reading {#p1a-background}
-
-Unfold the following note to read more about the data before continuing on (collapsed to save space):
-
-::: {.callout-note collapse=true}
-## About the data
-
-#### About FEMA's National Risk Index (NRI) for Natural Hazards
-
-[FEMA](https://www.fema.gov/about/strategic-plan/about-fema){target="_blank"} (Federal Emergency Management Agency) is a government agency with a mission of helping people before, during, and after disasters. In 2021, FEMA launched the **[National Risk Index (NRI)](https://hazards.fema.gov/nri/){target="_blank"}**, "a [dataset](https://hazards.fema.gov/nri/data-resources){target="_blank"} and [online tool](https://hazards.fema.gov/nri/map){target="_blank"} to help illustrate the United States communities most at risk for [18 natural hazards](https://hazards.fema.gov/nri/natural-hazards){target="_blank"}".
-
-**Risk** is defined as the potential for negative impacts resulting from natural hazards. It's calculated using the following equation (and illustrated in [this graphic](https://hazards.fema.gov/nri/Content/Images/StaticPageImages/Risk_Index_Calculation.svg){target="_blank"}; read more about [determining risk](https://hazards.fema.gov/nri/determining-risk){target="_blank"}):
-
-$$Risk\:Index = Expected\:Annual\:Loss \times \frac{Social\:Vulnerability}{Community\:Resilience}$$
-
-NRI provides hazard type-specific scores, as well as a composite score, which adds together the risk from all 18 hazard types. A community's **risk score** is represented by its percentile ranking among all other communities at the same level for Risk, Expected Annual Loss, Social Vulnerability and Community Resilience -- for example, if a given county's Risk Index percentile for a hazard type is 84.32 then its Risk Index value is greater than 84.32% of all US counties. Each community is also assigned a **risk rating**, which is a qualitative rating that describes the community in comparison to all other communities at the same level, ranging from “Very Low” to “Very High.”
-
-You can learn more about the NRI at [hazards.fema.gov/nri](https://hazards.fema.gov/nri/learn-more){target="_blank"}.
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/NRI.png")
-```
-
-::: {.center-text .gray-text .body-text-s}
-*Screenshot of the [The National Risk Index's interactive mapping and data-based interface](https://hazards.fema.gov/nri/map)*
-:::
-
-#### Accessing NRI Data
-
-Data at the county- and census tract-level are available for download in multiple formats (including Shapefiles & CSVs) from NRI's [Data Resources page](https://hazards.fema.gov/nri/data-resources){target="_blank"}.
-
-### About the US Census Bureau's American Community Survey (ACS)
-
-The **[American Community Survey (ACS)](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"}** is a nationwide, continuous survey designed to provide communities with reliable and timely social, economic, housing, and demographic data every year. Unlike the **Decennial Census** (which counts every person in the US every 10 years for the purpose of congressional appointment), the ACS collects detailed information from a small subset of the population (~3.5 million households) at 1- and 5-year intervals. Learn more about the [differences between these 1- and 5-year estimates](https://www.census.gov/programs-surveys/acs/guidance/estimates.html){target="_blank"}.
-
-#### Accessing ACS Data
-
-The US Census Bureau provides a couple of tools for accessing their data, including: 
-
-1. **[data.census.gov](https://data.census.gov){target="_blank"}:** a browser-based portal for exploring the many available [data tables](https://data.census.gov/table){target="_blank"} (e.g. [Table B02001](https://data.census.gov/table?q=B02001){target="_blank"}: Race)
-2. **[The Census Data API](https://www.census.gov/data/developers/data-sets.html){target="_blank"}:** a data service that enables software developers to access and use Census Bureau data within their applications
-
-*However,* when working in R, the **[`{tidycensus}`](https://walker-data.com/tidycensus/){target="_blank"} package** is arguably the easiest way to query and retrieve Census data -- use the [`get_acs()` function](https://walker-data.com/tidycensus/articles/basic-usage.html#working-with-acs-data){target="_blank"} to obtain ACS data for specified geographies (e.g. counties or census tracts), tables (e.g. B02001), variables (e.g. B02001_002, B02001_003), years (e.g. 2023), states (e.g. CA), surveys (e.g. acs1, acs5), etc.
-:::
-
-[**The following sections (Part 1b - 1d) should be completed via GitHub Classroom (find and accept the assignment link on Slack). Read on for the full assignment description.**]{.teal-text}
-
-### 1b. Create viz #1 + answer questions {#p1b-viz1}
-
-Create a data viz that helps to answer the question, [***How do FEMA National Risk Index scores for counties in California compare to those in other states?***]{.teal-text}, following these steps:
-
-1. **Download and unzip the data:** You'll use the [All Counties - County-level detail (Table)](https://hazards.fema.gov/nri/Content/StaticDocuments/DataDownload//NRI_Table_Counties/NRI_Table_Counties.zip) (2023 Release; accessed on the [NRI Data Resources page](https://hazards.fema.gov/nri/data-resources#csvDownload){target="_blank"}). Unzip the file, then drop the whole `NRI_Table_Counties/` folder into a `data/` folder in your HW repository.
-2. **Add your `data/` folder to `.gitignore`**: So we don't accidentally push our data to GitHub!
-3. **Read in `NRIDataDictionary.csv`:** `NRI_Table_Counties/` contains a few different files, including this CSV file which describes each of the NRI variables found in `NRI_Table_Counties.csv`. This is a helpful place to start!
-4. **Read in `NRI_Table_Counties.csv`:** This is your data.
-5. **Build your viz:** This may require some data wrangling first. Your final viz should: 
-    - [ ] include data for the 50 US states only (no territories)
-    - [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2023 Release)"), and alt text (following the formula described in [week 3 discussion](../discussion/week3/.qmd#discussion-materials){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
-    - [ ] consider and implement strategies for highlighting trends / important information (e.g. arranging data, highlighting data, adjusting scales)
-    - [ ] use custom colors (if applicable), rather than ggplot defaults 
-    - [ ] have an updated / polished theme (you'll learn more about fine-tuning ggplot themes in [week 4 discussion](../week4.qmd#discussion-materials){target="_blank"}) 
-
-::: {.callout-tip}
-## BEFORE you start wrangling / building your viz, be sure to...
-
-- identify / jot down your variables of interest and consider which data types they are
-- use online tools like [from Data to Viz](https://www.data-to-viz.com/){target="_blank} to help determine appropriate graph types, given your variables 
-- roughly sketch out your plots by hand (I find this *incredibly* helpful for understanding how my data needs to be wrangled to achieve my desired output(s))
-
-(You'll also want to repeat this process when creating your second data viz in [Part 1c](HW2.qmd#p1c-viz2))
-:::
-
-6. **Answer the following questions:**
-    - [ ] **a.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they (a bullet point list is fine)?
-    - [ ] **b.** How did you decide which type of graphic form was best suited for answering the question? What alternative graphic forms could you have used instead? Why did you settle on this particular graphic form?
-    - [ ] **c.** What modifications did you make to this viz to make it more easily readable?
-    - [ ] **d.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
-
-### 1c. Create viz #2 + answer questions {#p1c-viz2}
-
-Create a data viz that helps to answer the question, [***How does climate hazard risk exposure vary across racial / ethnic groups in California?***]{.teal-text}, following these steps:
-
-1. **Import ACS data using `tidycensus::get_acs()`:** You'll need your API key to use `{tidycensus}` (revisit [week 2 pre-class prep instructions](../week2.qmd#download-templates){target="_blank"}, if necessary). You may use the following code: 
-
-```{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: false
-#.........see all available ACS variables + descriptions.........
-acs_vars <- tidycensus::load_variables(year = 2023,
-                                       dataset = "acs1")
-
-#..................import race & ethnicity data..................
-race_ethnicity <- tidycensus::get_acs(
-  geography = "county",
-  survey = "acs1",
-  variables = c("B01003_001", "B02001_002", "B02001_003",
-                "B02001_004", "B02001_005", "B02001_006",
-                "B02001_007", "B02001_008", "B03002_012",
-                "B03002_002"),
-  state = "CA", 
-  year = 2023) |>
-  dplyr::left_join(acs_vars, by = dplyr::join_by(variable == name)) # join variable descriptions (so we know what's what!)
-```
-
-2. **Optionally, write your data to `.csv`:** It's always a good idea to write your data (i.e. the `race_ethnicity` data frame, from above) to file, in case the Census Bureau's API goes down. You may use the following code:
-
-```{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: false
-readr::write_csv(race_ethnicity, here::here("data", "ACS-race-ethnicity.csv"))
-```
-
-3. **Build your viz:** This will require some data wrangling first (including joining the NRI and ACS data). Your final viz should: 
-    - [ ] include the following racial / ethnic groups: White, Black or African American, American Indian and Alaska Native, Asian, Native Hawaiian and Other Pacific Islander, Some Other Race, Two or More Races, Hispanic or Latino
-    - [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2023 Release)"), and alt text (following the formula discussed in [week 3 discussion](../discussion/week3/week3-slides.qmd){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
-    - [ ] consider and implement strategies for highlighting trends / important information (e.g. arranging data, highlighting data, adjusting scales)
-    - [ ] use custom colors (if applicable), rather than ggplot defaults 
-    - [ ] have an updated theme / polished theme (you'll learn more about fine-tuning ggplot themes in [week 4 discussion](../week4.qmd#discussion-materials){target="_blank"})
-4. **Answer the following questions:**
-    - [ ] **a.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they (a bullet point list is fine)?
-    - [ ] **b.** How did you decide which type of graphic form was best suited for answering the question? What alternative graphic forms could you have used instead? Why did you settle on this particular graphic form?
-    - [ ] **d.** What modifications did you make to this viz to make it more easily readable?
-    - [ ] **d.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
-
-### 1d. Polish your `.qmd` file {#p1d-polish-qmd}
-
-Your rendered `.qmd` file should be polished and neatly organized. Be sure to consider / implement (as appropriate) the following:
-
-- [ ] update the YAML with your name using the `author` option
-- [ ] set appropriate code chunk options, such that:
-    - [ ] your code *and* outputs (i.e. data viz) render (see `eval`, `echo`)
-    - [ ] warnings and messages are suppressed (see `warning`, `message`) 
-    - [ ] (optional) outputs are center-aligned (if you find this more visually-pleasing than the default left-alignment; see `fig-align: "center"`)
-    - [ ] adjust the aspect ratio of your plot(s) so that your data / groups are easy to read (see `fig-asp`, which makes adjusting aspect ratios for rendered outputs quite easy; values > 1 make your plot taller and values < 1 make your plot wider)
-- [ ] code is appropriately annotated (NOTE: you *do not* need to annotate every line (like in [HW #1 Part 1](HW1.qmd#hw1-p1){target="_blank}), but you should include enough so that someone else reading your code understands the purpose of each discrete block of code)
-- [ ] include any necessary section headers / prose in the body of your Quarto doc to effectively organize your document
-
-## Rubric (specifications) {#p1-rubric}
-
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #2, Part I:
-
-::: {.callout-important}
-## Complete the following steps in your **GitHub Classroom repo** (`eds240-hw2-username/Part1.qmd`):
-
-Everyone receives one "free pass" for not successfully submitting assignments via specified channels, after which you will receive a "Not Yet" mark.
-:::
-
-- [ ] build and embed one data visualization that <sup>1</sup>effectively addresses the part 1b question *([How do FEMA National Risk Index scores for counties in California compare to those in other states?]{.teal-text})*, and which includes:
-  - [ ] data for the 50 US states
-  - [ ] an appropriate title, subtitle, caption, and alt text (using the `fig-alt` chunk option)
-  - [ ] **at least 2** adjustments to highlight trends / important information (e.g. arranging data, highlighting data, adjusting scales) 
-  - [ ] custom colors (as necessary)
-  - [ ] **at least 2** theme adjustments (e.g. applying an alternative pre-built theme, removing unnecessary text, modifying text, modifying plot panel, etc.) to improve readability / visual appeal
-- [ ] build and embed one data visualization that <sup>1</sup>effectively addresses the part 1c question *([How does climate hazard risk exposure vary across racial / ethnic groups in California?]{.teal-text})*, and which aslo includes:
-  - [ ] data for the racial / ethnic groups described in the Part 1c instructions, above
-  - [ ] an appropriate title, subtitle, caption, and alt text (using the `fig-alt` chunk option)
-  - [ ] **at least 2** adjustments to highlight trends / important information (e.g. arranging data, highlighting data, adjusting scales) 
-  - [ ] custom colors (as necessary)
-  - [ ] **at least 2** theme adjustments (e.g. applying an alternative pre-built theme, removing unnecessary text, modifying text, modifying plot panel, etc.) to improve readability / visual appeal
-
-::: {.callout-note}
-## <sup>1</sup>You must choose an appropriate graphic form, given these data, *but* there isn't necessarily one single correct answer.
-
-Choosing an incorrect graphic form (i.e. one that's inappropriate for your data) will result in a "Not Yet" score. However, there are numerous graphic forms which may be appropriate. Your final plots should clearly display the variables of interest, and you should be able to justify your choice in your written responses.
-:::
-
-- [ ] answer all questions (a-d) in full for *both* data visualizations
-- [ ] include *all* code, which is neatly organized and appropriately annotated
-- [ ] organize and polish your Quarto doc as described in [Part 1d](HW2.qmd#p1d-polish-qmd)
-- [ ] we (instructor & TA) should be able to run individual lines / chunks of code *and* render `Part1.qmd` without errors
-- [ ] push your completed `Part1.qmd` to GitHub via GitHub Classrooms by 11:59pm PT on Sat 02/04/2025
-
-<br>
-
-::: {.center-text .large-fa-icon .teal-text}
-{{< fa chart-line title="A simple line chart" >}} End Part I {{< fa chart-line title="A simple line chart" >}}
-:::
-
-<br>
-
-# [Part II: Data wrangling & exploratory data viz using your chosen data]{.pink-text} {#part2}
-
-## Learning Outcomes {#p2-learning-outcomes}
-
-**Note:** This part of HW #2 is a continuation of [HW #1, Part II](HW1.qmd#hw1-p2){target="_blank"} and is the next step in working towards your final course assignment. Your final assignment is meant to combine nearly all of the course learning outcomes(!):
-
-- identify which types of visualizations are most appropriate for your data and your audience
-- prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
 - build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 - write code from scratch and read and adapt code written by others
 - apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
 
-## Description {#p2-description}
+## Description {#description}
 
-### 2a. Review HW #4 instructions {#p2a-review-HW4}
+### a. Review HW #4 instructions {#part-a}
 
-[**Please begin by re-reading [HW #4](HW4.qmd) in full**]{.teal-text} as a reminder of the options, goals, and requirements for your final class assignment. 
+[**Begin by reading [HW #4](HW4.qmd){target="_blank"} in full**]{.teal-text} so that you have a clear understanding of the options, goals, and requirements for your final class assignment. 
 
-### 2b. Import & wrangle data, then create exploratory data viz {#p2b-explore-data}
+### b. Find data and brainstorm questions {#part-b}
 
-[**This week, you’ll focus on importing and wrangling your data (found as part of [HW #1, Part II](HW1.qmd#hw1-p2)), followed by the exploratory data visualization phase. Complete the following:**]{.teal-text} 
+Now that you have a better understanding of where we're headed, let's make a bit of progress towards that end goal. [**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Explore the [Data sources](../../resources.qmd#data-sources){target="_blank"} section of the course website's resources page if you need some inspiration on where to start (you are *not* limited to just these data sources): 
 
-- [ ] Create an file named, `HW2-exploration.qmd` within your `lastName-eds240-HW4` repo and add appropriate YAML fields.
-- [ ] Load necessary packages and read in your data.
-- [ ] Clean & wrangle your data.
-- [ ] Create at least **three** exploratory data visualizations (but of course feel free to create more!). The goal of these visualizations is to explore your data for any potentially interesting patterns or trends, which you or may not decide to pursue further as you iterate on your final project deliverable. These plots *do not* need to be polished (e.g. updated theme), but it may be helpful to try arranging data to identify any trends.
-- [ ] **IMPORTANT:** If you have a downloaded data file saved to your repo (e.g. you're not reading in your data directly from online, from a server, etc.) be sure to add your data folder / file to your `.gitignore`, particularly if this file is large.
+::: {.callout-tip}
+## Asking the right question is *critical* and also one of the most challenging steps
 
-### 2c. Answer questions {#p2c-questions}
+I highly recommend checking out the following resources before diving in:
 
-[**After completing the above steps, answer the following questions:**]{.teal-text}
-
-- [ ] **1.** What have you learned about your data? Have any potentially interesting patterns emerged? 
-- [ ] **2.** In HW #1, you outlined some questions that you wanted to answer using these data. Have you made any strides towards answering those questions? If yes, how so? If no, what next steps do you need to take (e.g. I need to create X plot type, I still need to track down Y data, I need to restructure existing data so that you can visualize it in Z ways, etc.)? 
-- [ ] **3.** What challenges do you foresee encountering with your data? These can be data wrangling and / or visualization challenges. 
-
-## Rubric (specifications) {#p2-rubric}
-
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #2, Part II:
-
-::: {.callout-important}
-## **Complete the following steps under your `lastName-eds240-HW4` repo, *not* in GitHub Classroom:**
-See details below.
+- this short Substack piece by [Enrico Bertini](https://enrico.bertini.io/){target="_blank"}, titled [*Asking the right data questions and asking the data questions right*](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"}, for some great insights on the challenges and approaches to discovering and revising your data question
+- this TED talk titled, [The Power in Effective Data Storytelling](https://www.youtube.com/watch?v=0e52QfQngrM){target="_blank"}, by [Malavica Sridhar](https://www.linkedin.com/in/malavica-sridhar/){target="_blank"} (~15 min; yes, I know the audio gets a little wonky part-way through {{< fa face-smile title="a smiling face" >}})
 :::
 
-- [ ] Perform all Part 2b steps (as described above) in your `HW2-exploration.qmd` file.
-- [ ] Answer Part 2c questions in your `HW2-exploration.qmd` file. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score. 
-- [ ] All three plot outputs should appear in your rendered doc.
-- [ ] `HW2-exploration.qmd` should be neatly organized -- this does not need to be a perfectly polished document, but sections should be clearly labeled with prose and / or annotations so that we can easily follow along.
-- [ ] Code chunks should have appropriate chunk options set (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.).
-- [ ] Send your instructor (Sam Shanny-Csik) and TA (Annie Adams) a rendered version of your `HW2-exploration.qmd` file by 11:59pm PT on Sat 02/04/2025 following these steps:
-  - [ ] **a.** ensure that your **YAML specifies these options**, at a minimum:
-  
-```{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: false
----
-title: "your HW #2 title"
-author: "your Name"
-date: xxxx-xx-xx
-format:
-  html:
-    embed-resources: true # this ensures that your rendered .html file is self-contained, so we (your instructors) can open it and view all your work
----
-```
-  
-  - [ ] **b. render** your `HW2-exploration.qmd` file, **verify** that you can open the resulting `HW2-exploration.html` file in your browser, and that all formatting looks good
-  - [ ] **c. save a copy** of `HW2-exploration.html` to your Desktop, **rename it** it so that it has your first initial / last name at the start (e.g. `SShannyCsik-HW2-exploration.html`), then **send** it to both your instructor (Sam Shanny-Csik) and TA (Annie Adams) on Slack via direct message 
-  
+### c. Answer questions {#part-c}
+
+[**Once you've found your data set(s), answer the following questions:**]{.teal-text}
+
+- [ ] **1.** Which of the [options](HW4.qmd#hw4-options){target="_blank"} are you most interested in pursuing (**Important:** If you plan to pursue [Option 3](HW4.qmd#option3-alternative){target="_blank}, you must submit your proposal by the HW #1 due date)? It's okay if you change your mind later on, but it's helpful to decide on a starting point. 
+- [ ] **2.** Describe your data set(s). Be sure to address the following:
+    - [ ] **a.** Where did you find these data?
+    - [ ] **b.** What variables do these data contain? Is there sufficient metadata for understanding what those variables are?
+- [ ] **3.** What steps are involved in downloading or accessing the data (e.g. "I can download using a button via this online portal," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  etc.)?
+- [ ] **4.** What question(s) do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"})? 
+- [ ] **5.** Will you need to combine multiple data sets to successfully answer your question(s)? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
+- [ ] ***Optional:** Import your data into R! (this will be a part of the next homework assignment) **IMPORTANT:** If your data files are large (>2GB) DO NOT push your data to GitHub -- instead, add your data file(s) or entire data folder to your `.gitignore` (you'll practice this in week 1 discussion section).*
+
+## Rubric (specifications) {#specs}
+
+You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #1, Part II:
+
+::: {.callout-important}
+## Part 2 to be completed under your own GitHub profile
+Complete the following step under your own personal GitHub profile, *not* via GitHub Classroom. See details below.
+:::
+
+- [ ] Create a GitHub repository named `yourLastName-eds240-HW4`, which is where you'll be doing any / all work related to Assignment #4. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
+- [ ] Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) (find the **Issues** tab in the top menu bar of your `lastName-eds240-HW4` repo, then click **New issue**) and name it, `HW1 - finding data / initial brainstorming`. Address the following in your issue:
+    - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for Assignment #4.
+    - [ ] Answer all five Part 2c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
+    - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
+    - [ ] Tag your instructor (**[@samanthacsik](https://github.com/samanthacsik){target="_blank"}**) and TA (**[@annieradams](https://github.com/annieradams){target="_blank"}**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
+- [ ] Importing your data is *optional* -- if you'd like to start playing around with your data, do so in a file named, `HW1-find-data.qmd`.
+- [ ] Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by 11:59pm on Sat 01/18/2025.
+- [ ] ***Optional:** If you are pursuing ([Option 3](HW4.qmd#option3-alternative){target="_blank"}), please share a Google Doc with your proposal via email by 11:59pm on Sat 01/18/2025. Be sure to send it to both your instructor (**scsik@ucsb.edu**) and TA (**annieradams@ucsb.edu**) with the subject line: **EDS 240 HW4 Proposal Submission.***
+
 <br>
 
 ::: {.center-text .large-fa-icon .teal-text}
-{{< fa chart-column title="A column chart" >}} End Part II {{< fa chart-area title="An area chart" >}}
+{{< fa table title="A data table with two columns and two rows" >}} End HW #2 {{< fa table title="A data table with two columns and two rows" >}}
 :::
-
