--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -1,147 +1,98 @@
 ---
-title: "Assignment #3 (HW #3)"
-subtitle: "Assigned Tue 02/11/2025 | Due Tue 02/25/2025"
+title: "HW #3: Visualizing FEMA NRI Data"
+subtitle: "Assigned Wed 01/21/2026 | Due Wed 01/28/2026"
+editor_options: 
+  chunk_output_type: console
 ---
 
-## Learning Objectives
-
-HW #3 will have you focus on making more progress towards completing your final assignment (HW #4). As a reminder, your final assignment is meant to combine all of the course learning outcomes(!):
+## Learning Outcomes {#p1-learning-outcomes}
 
 - identify which types of visualizations are most appropriate for your data and your audience
-- prepare (e.g. clean, explore, wrangle) data so that its appropriately formatted for building data visualizations
-- build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
-- write code from scratch and read and adapt code written by others
-- apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
-- assess, critique, and provide constructive feedback on data visualizations
+- prepare (e.g. clean, explore, wrangle) data so that it's appropriately formatted for building data visualizations
+- build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 
-## Description 
+## Description {#p1-description}
 
-[**Please begin by reviewing [HW #4](HW4.qmd){target="_blank"} in full**]{.teal-text} to refamiliarize yourself with the expectations for your final submission at the end of the quarter -- you'll again be making some incremental steps towards your final deliverables here in HW #3. 
+In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning to natural hazards and demographics data, courtesy of the **[FEMA National Risk Index](https://hazards.fema.gov/nri/){target="_blank"} (NRI)** and the **[US Census Bureau's American Community Survey](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"} (ACS)**.
 
-[**For HW #3, you must answer / complete the following:**]{.teal-text}
+### 1a. Background reading {#p1a-background}
 
-- [ ] **1.** Which option do you plan to pursue? It's okay if this has changed since HW #1.
-- [ ] **2.** Restate your question(s). Has this changed at all since HW #1? If yes, how so? 
+Unfold the following note to read more about the data before continuing on (collapsed to save space):
 
-::: {.callout-note}
-## Be mindful that the number of questions you list above will depend on which option you choose to pursue:
+::: {.callout-note collapse=true}
+## About the data
 
-- If you choose [option 1](HW4.qmd#option-1){target="_blank"}, you should have **one overarching question** and **at least three sub-questions** that each of your infographic components answer.
-- If you choose [option 2 ](HW4.qmd#option-2){target="_blank"}, you should have **one question** that each of your three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose.
-- If you chose [option 3](HW4.qmd#option-3){target="_blank"}, you should refer back to your approved proposal to determine how many questions you should list.
-:::
+#### About FEMA's National Risk Index (NRI) for Natural Hazards
 
-- [ ] **3.** Explain which variables from your data set(s) you will use to answer your question(s), and how.
+[FEMA](https://www.fema.gov/about/strategic-plan/about-fema){target="_blank"} (Federal Emergency Management Agency) is a government agency with a mission of helping people before, during, and after disasters. In 2021, FEMA launched the **[National Risk Index (NRI)](https://hazards.fema.gov/nri/){target="_blank"}**, "a [dataset](https://hazards.fema.gov/nri/data-resources){target="_blank"} and [online tool](https://hazards.fema.gov/nri/map){target="_blank"} to help illustrate the United States communities most at risk for [18 natural hazards](https://hazards.fema.gov/nri/natural-hazards){target="_blank"}".
 
-::: {.callout-important}
-## Important -- be specific here!
-For example, let's say I'm interested in how Lyme disease incidence is changing over time for states X, Y and Z. An appropriate explanation of variables might look something like this: 
+**Risk** is defined as the potential for negative impacts resulting from natural hazards. It's calculated using the following equation (and illustrated in [this graphic](https://hazards.fema.gov/nri/Content/Images/StaticPageImages/Risk_Index_Calculation.svg){target="_blank"}; read more about [determining risk](https://hazards.fema.gov/nri/determining-risk){target="_blank"}):
 
->*"I have two data sets, one containing population estimates by state from the `{tidycensus}` package, and another from the CDC containing lyme disease case counts by county and year. After wrangling / joining these data sets, I was able to calculate disease incidence as cases per 100k people at the state level. Doing so provides me with three variables to visualize: time (years), disease incidence (cases per 100k people), and state."*
-:::
+$$Risk\:Index = Expected\:Annual\:Loss \times \frac{Social\:Vulnerability}{Community\:Resilience}$$
 
-- [ ] **4.** In [HW #2](HW2.qmd){target="_blank"}, you created some exploratory data viz to better understand your data. You may already have some ideas of how you plan to formally visualize your data, but it's *incredibly* helpful to look at visualizations by other creators for inspiration. Find *at least two* data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your `.qmd` file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.). 
+NRI provides hazard type-specific scores, as well as a composite score, which adds together the risk from all 18 hazard types. A community's **risk score** is represented by its percentile ranking among all other communities at the same level for Risk, Expected Annual Loss, Social Vulnerability and Community Resilience -- for example, if a given county's Risk Index percentile for a hazard type is 84.32 then its Risk Index value is greater than 84.32% of all US counties. Each community is also assigned a **risk rating**, which is a qualitative rating that describes the community in comparison to all other communities at the same level, ranging from “Very Low” to “Very High.”
 
-::: {.callout-tip}
-## Tip: Remember to check out the Resources page!!
-It lists tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../../resources.qmd#inspiration){target="_blank"}. This is an excellent place to start when looking for inspiration.
-:::
+You can learn more about the NRI at [hazards.fema.gov/nri](https://hazards.fema.gov/nri/learn-more){target="_blank"}.
 
-- [ ] **5.** Hand-draw your anticipated visualizations, then take a photo of your drawing(s) and embed it in your rendered `.qmd` file -- **note** that these are not *exploratory* visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4. You should have:
-    - a sketch of your infographic (which should include at least three component visualizations) if you are pursuing [option 1](HW4.qmd#option-1){target="_blank"}
-    - a sketch of all three separate visualizations if you are pursuing [option 2](HW4.qmd#option-2){target="_blank"}
-    - a sketch of the approved number of visualizations, as outlined in your proposal, if you are pursuing [option 3](HW4.qmd#option-3){target="_blank"}
-
-::: {.callout-tip}
-## Tip: Embedding images into a `.qmd` file
-
-There are a number of ways to render an image in `.qmd` file. Two ways I find easiest are:
-
-1. Using `knitr::include_graphics()` in a code chunk. Here are the chunk options I often specify:
-
-```{{r}}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "100%"
-#| fig-alt: "Alt text here"
-knitr::include_graphics("path/to/image")
-```
-
-2. Using Markdown syntax:
-
-`![](file/path/to/image){fig-alt="Alt text goes here"}`
-
-**Here is a minimal example of a hand-drawn plot -- you don't need to be an artist, but your vision (and handwriting) should be clear:**
 ```{r}
 #| eval: true
 #| echo: false
+#| out-width: "80%"
 #| fig-align: "center"
-#| out-width: "40%"
-knitr::include_graphics("images/hand-drawn-plot.png")
+knitr::include_graphics("images/NRI.png")
 ```
 
+::: {.center-text .gray-text .body-text-s}
+*Screenshot of the [The National Risk Index's interactive mapping and data-based interface](https://hazards.fema.gov/nri/map)*
 :::
 
-- [ ] **6.** Mock up **all** of your hand drawn visualizations using code. We understand that you will continue to iterate on these into HW #4 (particularly after receiving feedback), but by the end of HW #3, you should:
+#### Accessing NRI Data
 
-  - [ ] have your data plotted (if you're experimenting with a graphic form(s) that was not explicitly covered in class, we understand that this may take some more time to build; you should have as much put together as possible)
-  - [ ] use appropriate strategies to highlight / focus attention on a clear message
-  - [ ] include appropriate text such as titles, captions, axis labels 
-  - [ ] experiment with colors and typefaces / fonts
-  - [ ] create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
+Data at the county- and census tract-level are available for download in multiple formats (including Shapefiles & CSVs) from NRI's [Data Resources page](https://hazards.fema.gov/nri/data-resources){target="_blank"}.
 
-- [ ] **7.** Answer the following questions:
-    - [ ] **a.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R? If you struggled with mocking up any of your three visualizations (from #6, above), describe those challenges here.
-    - [ ] **b.** What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
-    - [ ] **c.** What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
+### About the US Census Bureau's American Community Survey (ACS)
 
-## Rubric (specifications)
+The **[American Community Survey (ACS)](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"}** is a nationwide, continuous survey designed to provide communities with reliable and timely social, economic, housing, and demographic data every year. Unlike the **Decennial Census** (which counts every person in the US every 10 years for the purpose of congressional appointment), the ACS collects detailed information from a small subset of the population (~3.5 million households) at 1- and 5-year intervals. Learn more about the [differences between these 1- and 5-year estimates](https://www.census.gov/programs-surveys/acs/guidance/estimates.html){target="_blank"}.
 
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #3:
+#### Accessing ACS Data
 
-::: {.callout-note}
-## A few notes on expectations
+The US Census Bureau provides a couple of tools for accessing their data, including: 
 
-- Your plots don't have to be perfect but the message you want to convey should be clear
-- The more progress you make now, the more feedback we can provide ahead of HW #4
-- There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully 
-- Low-effort responses and plots will result in a "Not Yet" mark
+1. **[data.census.gov](https://data.census.gov){target="_blank"}:** a browser-based portal for exploring the many available [data tables](https://data.census.gov/table){target="_blank"} (e.g. [Table B02001](https://data.census.gov/table?q=B02001){target="_blank"}: Race)
+2. **[The Census Data API](https://www.census.gov/data/developers/data-sets.html){target="_blank"}:** a data service that enables software developers to access and use Census Bureau data within their applications
+
+*However,* when working in R, the **[`{tidycensus}`](https://walker-data.com/tidycensus/){target="_blank"} package** is arguably the easiest way to query and retrieve Census data -- use the [`get_acs()` function](https://walker-data.com/tidycensus/articles/basic-usage.html#working-with-acs-data){target="_blank"} to obtain ACS data for specified geographies (e.g. counties or census tracts), tables (e.g. B02001), variables (e.g. B02001_002, B02001_003), years (e.g. 2023), states (e.g. CA), surveys (e.g. acs1, acs5), etc.
 :::
 
-- [ ] Complete all work in a file named, `HW3-drafting-viz.qmd`, which lives in your `lastName-eds240-HW4` repository -- you are welcome to draft / practice things in different files / scripts, but you must have all required elements of the assignment available in *this* file for us to reference and grade.
-- [ ] Add any necessary YAML options (title, author, date, etc.). You must also include the following options:
+[**The following sections (Part 1b - 1d) should be completed via GitHub Classroom (find and accept the assignment link on Slack). Read on for the full assignment description.**]{.teal-text}
 
-```{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: false
----
-# ~ additional YAML options omitted for brevity ~
-format:
-  html:
-    embed-resources: true
----
-```
+### 1b. Create viz #1 + answer questions {#p1b-viz1}
 
-- [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
-- [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
-- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
-- [ ] Submit both an HTML *and* PDF version of your HW #3 via Gradscope by 11:59pm on Tue 02/25/2025 following these instructions:
-    - [ ] **To submit your HTML file:** Render your `HW3-drafting-viz.qmd`, verify that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. Submit your HTML file to the Gradscope assignment titled, "Homework 3 - HTML"
-    - [ ] **To submit your PDF file:** Convert your HTML to PDF by either **(a)** `Cmd / Ctrl` + `P` to Print > Save as PDF (easiest option), or **(b)** rendering your `HW3-drafting-viz.qmd` file directly to PDF. Submit your PDF file to Gradescope assignment titled, "Homework 3 - PDF"
-        - [ ] ***IMPORTANT:** If you have folded code chunks, please be sure to unfold them before saving as a PDF (to ensure that all code is visible)*
+Create a data viz that helps to answer the question, [***How do FEMA National Risk Index scores for counties in California compare to those in other states?***]{.teal-text}, following these steps:
 
-<!-- ::: {.callout-note} -->
-<!-- ## A few notes on expectations -->
+1. **Download and unzip the data:** You'll use the [All Counties - County-level detail (Table)](https://hazards.fema.gov/nri/Content/StaticDocuments/DataDownload//NRI_Table_Counties/NRI_Table_Counties.zip) (2023 Release; accessed on the [NRI Data Resources page](https://hazards.fema.gov/nri/data-resources#csvDownload){target="_blank"}). Unzip the file, then drop the whole `NRI_Table_Counties/` folder into a `data/` folder in your HW repository.
+2. **Add your `data/` folder to `.gitignore`**: So we don't accidentally push our data to GitHub!
+3. **Read in `NRIDataDictionary.csv`:** `NRI_Table_Counties/` contains a few different files, including this CSV file which describes each of the NRI variables found in `NRI_Table_Counties.csv`. This is a helpful place to start!
+4. **Read in `NRI_Table_Counties.csv`:** This is your data.
+5. **Build your viz:** This may require some data wrangling first. Your final viz should: 
+    - [ ] include data for the 50 US states only (no territories)
+    - [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2023 Release)"), and alt text (following the formula described in [week 3 discussion](../discussion/week3/.qmd#discussion-materials){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
+    - [ ] consider and implement strategies for highlighting trends / important information (e.g. arranging data, highlighting data, adjusting scales)
+    - [ ] use custom colors (if applicable), rather than ggplot defaults 
+    - [ ] have an updated / polished theme (you'll learn more about fine-tuning ggplot themes in [week 4 discussion](../week4.qmd#discussion-materials){target="_blank"}) 
 
-<!-- - Your plots don't have to be perfect but the message you want to convey should be clear -->
-<!-- - The more progress you make now, the more feedback we can provide ahead of HW #4 -->
-<!-- - There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully  -->
-<!-- - Low-effort responses and plots will result in a "Not Yet" mark -->
-<!-- ::: -->
+::: {.callout-tip}
+## BEFORE you start wrangling / building your viz, be sure to...
 
+- identify / jot down your variables of interest and consider which data types they are
+- use online tools like [from Data to Viz](https://www.data-to-viz.com/){target="_blank} to help determine appropriate graph types, given your variables 
+- roughly sketch out your plots by hand (I find this *incredibly* helpful for understanding how my data needs to be wrangled to achieve my desired output(s))
 
-<!-- - [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sam and Annie on Slack via direct message by 11:59pm on Sat 02/22/2025. -->
+(You'll also want to repeat this process when creating your second data viz in [Part 1c](HW2.qmd#p1c-viz2))
+:::
 
-
+6. **Answer the following questions:**
+    - [ ] **a.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they (a bullet point list is fine)?
+    - [ ] **b.** How did you decide which type of graphic form was best suited for answering the question? What alternative graphic forms could you have used instead? Why did you settle on this particular graphic form?
+    - [ ] **c.** What modifications did you make to this viz to make it more easily readable?
+    - [ ] **d.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
